--- a/Web/Index.html
+++ b/Web/Index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Pagina de Emma</title>
+        <!--
         <script type="text/JavaScript">
             alert("Hola bebé");
             alert("¿Cómo has estado?");
             alert("Tal vez no sepas quien habla");
             alert("O tal vez lo hayas olvidado");
         </script>
-        <script type="text/JavaScript" src=""></script>
+        -->
+        <script type="text/JavaScript" src="hola-mundo.js"></script>
     </head>
     <body>
       <h1>Pagina de Emma</h1>
